user-service-app1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-app-deployment
  labels:
    app: user-service-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service-app
  template:
    metadata:
      labels:
        app: user-service-app
    spec:
      containers:
        - name: user-service-container
          image: 221694501242.dkr.ecr.us-east-1.amazonaws.com/frontend:frontendv1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-app-nodeport-service
  labels:
    app: user-service-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app1/health
spec:
  type: NodePort
  selector:
    app: user-service-app
  ports:
    - port: 80
      targetPort: 5000
