ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: ingress-apps
  labels:
    app: ingress-app
  annotations:
    # Ingress Core Settings
    #kubernetes.io/ingress.class: "alb"
    #kubernetes.io/role/elb: '1'
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    #alb.ingress.kubernetes.io/subnets: 
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: user-service-app-nodeport-service
                port: 
                  number: 80
          - path: /app2/
            pathType: Prefix
            backend:
              backend:
              service:
                name: nginx-app-service
                port: 
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-app-service
                port: 
                  number: 80
